maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: not found: value random3
      atteint=random3()
              ^